syntax = "proto3";

package proto.v1;

import "google/protobuf/timestamp.proto";
import "proto/v1/tracks.proto";

option go_package = "github.com/untea/bottom_babruysk/internal/transport/gen/proto/v1;protov1";

service PlaylistsService {
  rpc CreatePlaylist(CreatePlaylistRequest) returns (CreatePlaylistResponse);
  rpc GetPlaylist(GetPlaylistRequest) returns (GetPlaylistResponse);
  rpc ListPlaylists(ListPlaylistsRequest) returns (ListPlaylistsResponse);
  rpc UpdatePlaylist(UpdatePlaylistRequest) returns (UpdatePlaylistResponse);
  rpc DeletePlaylist(DeletePlaylistRequest) returns (DeletePlaylistResponse);
}

message Playlist {
  string id = 1;
  string owner_id = 2;
  string title = 3;
  string description = 4;
  Visibility visibility = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreatePlaylistRequest {
  string owner_id = 1;
  string title = 2;
  string description = 3;
  Visibility visibility = 4;
}

message CreatePlaylistResponse {
  string id = 1;
}

message GetPlaylistRequest {
  string id = 1;
}

message GetPlaylistResponse {
  Playlist playlist = 1;
}

message ListPlaylistsRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string owner_id = 3;
  Visibility visibility = 4;
  string sort_field = 5;
  string sort_order = 6;
}

message ListPlaylistsResponse {
  repeated Playlist playlists = 1;
}

message UpdatePlaylistRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional Visibility visibility = 4;
}

message UpdatePlaylistResponse {}

message DeletePlaylistRequest {
  string id = 1;
}

message DeletePlaylistResponse {}
